--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+    <button class="watched_btn">WATCHED</button>
+    <button class="queue_btn">QUEUE</button>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
