--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,11 @@
       </svg>
     </label>
      </div>
-     <!-- <div class="btn-controls ">
-      <button class="watched_btn active-btn">WATCHED</button>
-      <button class="queue_btn disactive-btn">QUEUE</button>
+     <div class="nav-btn is-hidden">
+      <button class="btn-controls active-btn" id="watched_btn">WATCHED</button>
+      <button class="btn-controls" id="queue_btn">QUEUE</button>
       </div>
-      </div> -->
+      </div>
       </header>
 
 
