--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,10 @@
 
 
     <div class="film-gallery"></div>
-
+<!-- Модалки -->
+<div id="modal" class="modal">
+ 
+</div>
 
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
