--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,8 @@
 
     <include src="./partials/gallery.html"></include>
 
-
+    <include src="./partials/footer.html"></include>
+    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
     <script src="./index.js"></script>
