--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
     <!-- <include src="./partials/example.html"></include> -->
 
     <include src="./partials/gallery.html"></include>
-
+    <include src="./partials/spinner.html"></include>
     <include src="./partials/footer.html"></include>
     
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
