--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </head>
   <body>
 
-    <header class="page-header" id="the_body") ;">
+    <header class="page-header" id="the_body">
 
       <div class="container">
          <div class="main-nav">
