--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <include src="./partials/trailer_modal.html"></include>   
      
     <script src="./index.js"></script>
-    <script type="text/javascript" src="//web-ptica.ru/VRV-files/knopkavverh/22.js"></script>
+    <!--<script type="text/javascript" src="//web-ptica.ru/VRV-files/knopkavverh/22.js"></script>-->
+  <script type="text/javascript" src="//web-ptica.ru/VRV-files/knopkavverh/19.js"></script>
   </body>
 </html>
